[package]
name = "tracing-elastic-apm"
version = "4.0.0"
authors = ["Kamil Rojewski <kamil.rojewski@gmail.com>"]
edition = "2018"
description = "Elastic APM intake API tracing layer."
documentation = "https://docs.rs/tracing-elastic-apm"
homepage = "https://github.com/krojew/tracing-elastic-apm"
repository = "https://github.com/krojew/tracing-elastic-apm"
readme = "./README.md"
keywords = ["tracing", "elastic", "apm", "telemetry"]
license = "MIT"

[dependencies]
base64 = "0.22"
fxhash = "0.2"
rand = "0.10"
reqwest = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std"] }
version = "3.0"
anyhow = "1.0.42"
valuable = { version = "0.1.0", optional = true, features = ["derive"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
valuable = ["dep:valuable"]
