[package]
authors = ["Harvey Han <hui.h@kaitaitech.cn>"]
edition = "2021"
license = "MIT"
name    = "examples"
publish = false
version = "0.1.0"


[[bin]]
name = "grpc-client"
path = "src/tracing/client.rs"


[[bin]]
name = "grpc-server"
path = "src/tracing/server.rs"

[[bin]]
name = "http-server"
path = "src/tracing/http.rs"


[dependencies]
# Common dependencies
tokio      = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost      = { version = "0.11" }
tonic      = { version = "0.9.2" }
tower      = { version = "0.4.13" }
axum       = { version = "0.6.10", features = ["multipart"] }
serde      = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
reqwest    = { version = "0.11.18" }
http       = { version = "0.2.9" }

tracing             = { version = "0.1.37" }
tracing-subscriber  = { version = "0.3.17", features = ["ansi", "env-filter", "fmt", "json"] }
tracing-elastic-apm = { path = "../" }

[build-dependencies]
tonic-build = { version = "0.9.2" }
